Arreglo-palabras Correción algunas palabras

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="main-section">
         <article class="welcome">
-            <h1 class="welcome-title">Tal vez te pueda interesar:</h1>
+            <h1 class="welcome-title">Quizás te pueda interesar:</h1>
             
             <article class="cards">
                 <div class="card-cont" id="db">
