--- a/react-d'lish/index.html
+++ b/react-d'lish/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon_green.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Precarga de las fuentes -->
+    <link rel="preload" href="https://fonts.cdnfonts.com/css/trebuchet-ms-2" as="style" />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap"
+        as="style" />
+
     <title>Dlish</title>
 </head>
 
 <body>
-    <div id="root" class="h-screen"></div>
+    <div id="root" class="h-screen font-body"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
