--- a/react-d'lish/index.html
+++ b/react-d'lish/index.html
@@ -10,7 +10,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap"
         as="style" />
 
-    <title>Dlish</title>
+    <title>D'lish</title>
 </head>
 
 <body>
